--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Mahira | VCard | CV HTML Template</title>
+<title>Tongzhou Zhang | Personal Website</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -75,13 +75,13 @@
                     <div class="author-info" style="background-image:url(images/background/3.jpg)">
                         <div class="image"><img src="images/resource/user.png" alt=""></div>
                         <div class="author">
-                            <h3>Mahira Rashid</h3>
+                            <h3>Tongzhou Zhang</h3>
                             <div class="designation">
                                 Hi i’m
                                 <div class="typing-title">
                                     <p>a <strong>web developer.</strong></p>
-                                    <p>a <strong>web Designer.</strong></p>
-                                    <p>a <strong>photographer.</strong></p>
+                                    <p>a <strong>Student.</strong></p>
+                                    <p>a <strong>Engineer.</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
                             </div>
@@ -120,8 +120,8 @@
                                         Hi i’m
                                         <div class="typing-title">
                                             <p>a <strong>web developer.</strong></p>
-                                            <p>a <strong>web Designer.</strong></p>
-                                            <p>a <strong>photographer.</strong></p>
+                                            <p>a <strong>Student.</strong></p>
+                                            <p>a <strong>Engineer.</strong></p>
                                         </div>
                                         <span class="typed-title"></span>
                                     </div>
@@ -152,14 +152,14 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Name:</strong>  Mahira Rashid</li>
-                                                <li><strong>Phone:</strong>  254 - 2563 - 2154</li>
-                                                <li><strong>Address:</strong>  San francisco, USA</li>
+                                                <li><strong>Name:</strong>  Tongzhou Zhang</li>
+                                                <li><strong>Phone:</strong>  +86 18500529598</li>
+                                                <li><strong>Address:</strong>  Beijing, China</li>
                                             </ul>
                                         </div>
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Email:</strong>  mahirarashid@gmail.com</li>
+                                                <li><strong>Email:</strong>  jojotongzhou@gmail.com</li>
                                                 <li><strong>Freelance:</strong>  Available</li>
                                             </ul>
                                         </div>
