--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
                             
                             <li class="current"><a href="#home">Home</a></li>
                             <li><a href="#about">About</a></li>
-                            <li><a href="#resume">Resume</a></li>
-                            <li><a href="#services">Services</a></li>
-                            <li><a href="#work">Works</a></li>
-                            <li><a href="#blog">Blog</a></li>
+                            <li><a href="#personal project">Personal project</a></li>
+                            <li><a href="#music">Music</a></li>
+                            <li><a href="#sports">Sports</a></li>
+                            <li><a href="#internship diary">Internship diary</a></li>
+                            <li><a href="#photo album">Photo album</a></li>
                             <li><a href="#contact">Contact</a></li>
 
                          </ul>
@@ -101,10 +102,11 @@
                             <ul class="main-menu">
                                 <li class="active home"><a class="logo" href="#home"><img src="images/logo.png" alt=""></a></li>
                                 <li><a href="#about"><i class="flaticon-social"></i>About</a></li>
-                                <li><a href="#resume"><i class="flaticon-curriculum"></i>Resume</a></li>
-                                <li><a href="#services"><i class="flaticon-layers-1"></i>Services</a></li>
-                                <li><a href="#work"><i class="flaticon-tools"></i>Works</a></li>
-                                <li><a href="#blog"><i class="flaticon-blog"></i>Blog</a></li>
+                                <li><a href="#personal project"><i class="flaticon-curriculum"></i>Personal project</a></li>
+                                <li><a href="#music"><i class="flaticon-layers-1"></i>Music</a></li>
+                                <li><a href="#sports"><i class="flaticon-tools"></i>Sports</a></li>
+                                <li><a href="#internship diary"><i class="flaticon-blog"></i>Internship diary</a></li>
+                                <li><a href="#photo album"><i class="flaticon-blog"></i>Photo album</a></li>
                                 <li><a href="#contact"><i class="flaticon-send-mail"></i>Contact</a></li>
                             </ul>
                         </header>
@@ -115,7 +117,7 @@
                             <div class="card-inner wow fadeInUp" data-wow-duration="2s">
                                 <div class="image"><img src="images/resource/user.png" alt=""></div>
                                 <div class="author">
-                                    <h3>Mahira Rashid</h3>
+                                    <h3>Tongzhou Zhang</h3>
                                     <div class="designation">
                                         Hi i’m
                                         <div class="typing-title">
