--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                         <!-- end item -->
 
                         <!-- card item -->
-                        <div class="card-resume card-item" id="resume" style="background-image:url(images/background/2.jpg)">
+                        <div class="card-resume card-item" id="personal project" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
-                                <h4 class="title">Resume</h4>
+                                <h4 class="title">Personal project</h4>
                                 <div class="row clearfix">
                                     <!--Column-->
                                     <div class="timeline-column col-md-6 col-sm-12 col-xs-12">
